fix: contrast + speed

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,7 +85,7 @@ div.content
     font-size: 18px;
     font-weight: 300;
 
-    color: #777;
+    color: #595959;
 }
 .copyright
 {
@@ -115,7 +115,7 @@ div.content
 {
     margin-top: 150px;
 
-    color: #777;
+    color: #595959;
 }
 .excerpt
 {
@@ -153,7 +153,7 @@ div.content
 {
     font-family: 'Open Sans', serif;
     font-weight: 200;
-    color: #777;
+    color: #595959;
 }
 h3.intro
 {
